@@ -270,3 +270,9 @@ $;SFFTOCA_EXEC$;=/usr/local/bin/sffToCA
 
 [component fast_tree]
 $;FASTTREE_EXEC$;=/usr/local/bin/FastTree
+
+[component mosaik]
+$;MOSAIK_ALIGNER_EXEC$;=/usr/local/bin/MosaikAligner
+$;MOSAIK_BUILD_EXEC$;=/usr/local/bin/MosaikBuild
+$;MOSAIK_ASSEMBLER_EXEC$;=/usr/local/bin/MosaikAssembler
+$;MOSAIK_SORT_EXEC$;=/usr/local/bin/MosaikSort
